# pypeid

./: .gitignore  .gitmodules  LICENSE  README.md  mypy.ini  pyproject.toml
src/pypeid/: __init__.py  __main__.py  cli.py  scanner.py
tests/: __main__.py  test_scanner.py
tests/expected/: TestDotNet.dll.txt  TestExe_x64.exe.txt  TestExe_x86.exe.txt
