[tool.poetry]
name = "pypeid"
version = "0.1.1"
description = "Yet another implementation of PEiD with yara-python"
authors = ["Koh Nakagawa <tsunekou1019@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
yara-python = "^4.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
pytest = "^7.1.1"
isort = "^5.10.1"
pip-licenses = "^3.5.3"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
