[tool.poetry]
name = "pypeid"
version = "0.1.2"
description = "Yet another implementation of PEiD with yara-python"
authors = ["Koh Nakagawa <tsunekou1019@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yara-python = "^4.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
