[tool.poetry]
name = "pypeid"
version = "0.1.3"
description = "Yet another implementation of PEiD with yara-python"
authors = ["Koh Nakagawa <tsunekou1019@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yara-python = "^4.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
